# marciano

./: .gitignore  README.md  setup.cfg
marciano/: PeriodicTable.csv  evolution.py  microwave.py  periodictable.py  solar_system_model.py  solar_system_model2.py  spherical_spiral.py  utility_funcs.py
