[metadata]
name = marciano
description = Composition tools for the collaboration between Marc Evanstein and Mariano Sigman.
long_description = file: README.md
author = Marc Evanstein
author_email = marc@marcevanstein.com
url = (in development)
license = GNU GPL Version 3
version = 2023.09.24

[options]
zip_safe = False
packages = find:
install_requires =
    scamp >= 0.9.1
    scamp_extensions
    numpy
    pandas
    scipy
    astroquery
    astropy
    healpy

[options.package_data]
marciano = *.csv